apps/dev/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  labels:
    app: audiobookshelf
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      securityContext:
        fsGroup: 988
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.37.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: audiobooks
              mountPath: /audiobooks
            - name: podcasts
              mountPath: /podcasts
            - name: metadata
              mountPath: /metadata
            - name: config
              mountPath: /config
      volumes:
        - name: audiobooks
          persistentVolumeClaim:
            claimName: audiobookshelf-audiobooks
        - name: podcasts
          persistentVolumeClaim:
            claimName: audiobookshelf-podcasts
        - name: metadata
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata
        - name: config
          persistentVolumeClaim:
            claimName: audiobookshelf-config
