apps/dev/audiobookshelf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`audiobookshelf.stadthagen.dev`)
      kind: Rule
      services:
        - name: audiobookshelf
          port: 80
  tls:
    secretName: audiobookshelf-tls
